# tracker-wii-pt

./: CMakeLists.txt  FTNoIR_WII_PT_Controls.ui  README.md  camera.cpp  camera.h  ftnoir_tracker_wii_pt.cpp  ftnoir_tracker_wii_pt.h  ftnoir_tracker_wii_pt.qrc  ftnoir_tracker_wii_pt_dialog.cpp  ftnoir_tracker_wii_pt_dialog.h  ftnoir_tracker_wii_pt_settings.h  point_extractor.h  point_tracker.cpp  point_tracker.h
lang/: nl_NL.ts  ru_RU.ts  stub.ts
wiiv/: CMakeLists.txt  video-widget.cpp  video-widget.hpp
wiiyourself/: CMakeLists.txt
